# cctlib

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  LICENSE.TXT  Makefile  Makefile.am  Makefile.in  Makefile.inc  ProjectHome.md  README  README.md  README_8md.html  aclocal.m4  address__compare_8cpp.html  address__compare_8cpp.js  address__compare_8cpp__incl.map  address__compare_8cpp__incl.md5  address__compare_8cpp_source.html  annotated.html  annotated_dup.js  build.sh  build_no_boost.sh  cache__client_8cpp.html  cache__client_8cpp.js  cache__client_8cpp__incl.map  cache__client_8cpp__incl.md5  cache__client_8cpp_source.html  cache__client__integration__test_8cpp.html  cache__client__integration__test_8cpp.js  cache__client__integration__test_8cpp__incl.map  cache__client__integration__test_8cpp__incl.md5  cache__client__integration__test_8cpp_source.html  cct__client_8cpp.html  cct__client_8cpp.js  cct__client_8cpp__incl.map  cct__client_8cpp__incl.md5  cct__client_8cpp_source.html  cct__client__mem__only_8cpp.html  cct__client__mem__only_8cpp.js  (+1521 more)
apps/: Makefile.am  Makefile.in  cct_eviction_test.cpp  cct_reuse_test.cpp  reuseApp.cpp  reuse_test.cpp
branches/32-bit-support/: Makefile.am  Makefile.in  build.sh  configure
branches/32-bit-support/src/: Makefile.am  Makefile.in  cctlib.H  cctlib.cpp
branches/32-bit-support/tests/: Makefile.am  Makefile.in  cct_client.cpp  cct_data_centric_client.cpp  deadspy_client.cpp
clients/: Makefile.am  Makefile.in  cache_client.cpp  cct_metric_client.cpp  cct_shape_check.cpp  cctlib_reader.cpp  deadspy_client.cpp  footprint_client.cpp  footprint_client2.cpp  ins_reuse_client.cpp  loadspy_client.cpp  loadspy_spatial_client.cpp  loadspy_temporal_client.cpp  loop_extraction.h  omp_datarace_client.cpp  redspy_client.cpp  redspy_client_merge.cpp  redspy_reg_client.cpp  redspy_spatial_approx_client.cpp  redspy_spatial_client.cpp  redspy_spatial_userdefine_client.cpp  redspy_temporal_approx_client.cpp  redspy_temporal_client.cpp  reuse_distance_splay.h  runtime_value_numbering_client.cpp  shadow_memory.cpp  zerospy_cachepage.cpp  zerospy_client.cpp  zerospy_spatial_client.cpp
clients/footprint_test/: test1.c  test4.c  test6.c
clients/loadspy_test/spatial/: Makefile  interFile.c  interFile.h  interFunc.c  intraFunc.c
clients/loadspy_test/temporal/: Makefile  interFile.c  interFile.h  interFunc.c  interFunc2.c  intraFunc.c
clients/valueNum_test/: test4.c  testArray.c
src/: Makefile.am  Makefile.in  cctlib.H  cctlib.cpp  config.h.in  pin_isa_compat.H  rbtree.h  shadow_memory.H  splay-macros.h
tests/: Makefile  Makefile.am  Makefile.in  address_compare.cpp  cache.cpp  cct_client.cpp  cct_client_mem_only.cpp  cct_data_centric_client.cpp  cct_data_centric_client_tree_based.cpp  cct_data_name.cpp  cct_metric_client.cpp  cctlib_reader.cpp  deadWrites.cpp  deadspy_client.cpp  footprint_client.cpp  footprint_client2.cpp  omp_datarace_client.cpp  redspy_client.cpp  redspy_client_merge.cpp  redspy_intraArray_client.cpp  redspy_reg_client.cpp  redspy_spatial_approx_client.cpp  redspy_spatial_client.cpp  redspy_spatial_userdefine_client.cpp  redspy_temporal_approx_client.cpp  redspy_temporal_client.cpp  shadow_memory.cpp  shadow_memory_unittest.cpp  snippet.cpp  splay_deserialize_test.cpp  valueNum.cpp  verify_cct_eviction.py  verify_reuse_distance.py
tests/footprint_test/: Makefile  test2.c  test5.c
tests/gtest/: Makefile  cache_client_integration_test.cpp  cctlib_integration_test.cpp  deadspy_integration_test.cpp  exception_integration_test.cpp  exception_shape_test.cpp  footprint_integration_test.cpp  ins_reuse_integration_test.cpp  loadspy_integration_test.cpp  omp_race_integration_test.cpp  rbtree_test.cpp  recursion_integration_test.cpp  redspy_integration_test.cpp  reuse_distance_splay_test.cpp  rvn_integration_test.cpp  shadow_memory_test.cpp  splay_deserialize_test.cpp
tests/gtest/apps/: deadspy_tn_simple.c  deadspy_tp_minimal.c  deadspy_tp_simple.c  deadspy_tp_sizes.c  footprint_large.c  footprint_small.c  ins_reuse_tight_loop.c  loadspy_tn_simple.c  loadspy_tp_simple.c  omp_race_tn_critical.c  omp_race_tp_simple.c  redspy_tn_simple.c  redspy_tp_simple.c  redspy_tp_sizes.c  rvn_tn_different.c  rvn_tp_repeated.c
tests/gtest/apps/exceptions/: exc_catch_and_resume.cpp  exc_catchall.cpp  exc_ctor_throw.cpp  exc_deep_unwind.cpp  exc_dtor_cleanup.cpp  exc_none_tn.cpp  exc_polymorphic.cpp  exc_recurse_trycatch.cpp  exc_rethrow.cpp  exc_simple_throw.cpp  exc_stress_loop.cpp  exc_uncaught_tn.cpp  sig_longjmp.cpp  sig_sigsegv_recover.cpp
tests/gtest/apps/isa/: deadspy_addressing_tp.c  deadspy_avx32_tp.c  deadspy_cmpxchg_tn.c  deadspy_cross_page_qword_tp.c  deadspy_movnti_tp.c  deadspy_partial_qword_then_byte_high_tp.c  deadspy_partial_qword_then_byte_tp.c  deadspy_prefetch_tp.c  deadspy_pushpop_dead_tp.c  deadspy_repstos_tp.c  deadspy_sse16_tp.c  deadspy_xchg_tn.c  deadspy_xchg_tp.c  footprint_avx32_sweep.c  ins_reuse_simd_loop.c  loadspy_avx32_tp.c  loadspy_cross_page_tp.c  loadspy_mixed_widths_tp.c  loadspy_repmovs_tp.c  loadspy_sse16_tp.c  redspy_avx32_tp.c  redspy_cross_page_tp.c  redspy_immediate_tp.c  redspy_partial_qword_then_byte_tp.c  redspy_scalar_sse_tp.c  redspy_sse16_tp.c  redspy_zero_fill_tp.c  rvn_repeated_add.c
tests/gtest/apps/recursion/: rec_ackermann.cpp  rec_baseline_nonrec.cpp  rec_exception.cpp  rec_fib_deep.cpp  rec_indirect_only.cpp  rec_multi_direct.cpp  (+2 more)
tests/valueNum_test/: Makefile  test2.c  test5.c  test6.c  testArray.c
trunk/: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.inc  README  build.sh  configure  configure.ac  install-sh
trunk/src/: Makefile  Makefile.am  Makefile.in  cctlib.H  cctlib.cpp
trunk/tests/: Makefile  Makefile.am  Makefile.in  cct_client.cpp  cct_client_mem_only.cpp  cct_data_centric_client.cpp  cct_data_centric_client_tree_based.cpp  cct_data_name.cpp  cctlib_reader.cpp  deadspy_client.cpp  footprint_client.cpp  threaded.c  valueNum.cpp
trunk/tests/footprint_test/: Makefile  test1.c  test3.c
trunk/tests/valueNum_test/: Makefile  test.c  test3.c
(+571 files in other folders)
